--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,9 +63,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/images/onboarding_1.jpg
-    - lib/assets/images/onboarding_2.jpg
-    - lib/assets/images/consultate.jpg
+    - lib/assets/images/welcome.png
+    - lib/assets/images/onboarding_2.png
+    - lib/assets/images/consultate.png
     - lib/assets/images/john_doe_medik.jpeg
     - lib/assets/images/jane_smith_medik.jpeg
 
